--- a/python3.9.6
+++ b/python3.9.6
@@ -1,4 +1,8 @@
-alias python=/usr/local/opt/python-3.9.6/bin/python3.9
 
-. ~/.bashrc
+1)  sudo nano ~/.bashrc 
 
+
+
+2)  alias python=/usr/local/opt/python-3.9.6/bin/python3.9
+
+3)  . ~/.bashrc
